ircv3_parse_derive/tests/ui/de/fail/nested_type.stderr
error: field `inner` requires an #[irc(...)] attribute for ToMessage serialization
 --> tests/ui/de/fail/nested_type.rs:7:5
  |
7 |     inner: Inner,
  |     ^^^^^^^^^^^^

error: field `inner` requires an #[irc(...)] attribute for ToMessage serialization
  --> tests/ui/de/fail/nested_type.rs:12:5
   |
12 | /     #[irc()]
13 | |     inner: Inner,
   | |________________^

error[E0599]: no function or associated item named `from_message` found for struct `Inner` in the current scope
 --> tests/ui/de/fail/nested_type.rs:5:10
  |
3 | struct Inner(String);
  | ------------ function or associated item `from_message` not found for this struct
4 |
5 | #[derive(FromMessage, ToMessage)]
  |          ^^^^^^^^^^^ function or associated item not found in `Inner`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `from_message`, perhaps you need to implement it:
          candidate #1: `FromMessage`
  = note: this error originates in the derive macro `FromMessage` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `from_message` found for struct `Inner` in the current scope
  --> tests/ui/de/fail/nested_type.rs:10:10
   |
 3 | struct Inner(String);
   | ------------ function or associated item `from_message` not found for this struct
...
10 | #[derive(FromMessage, ToMessage)]
   |          ^^^^^^^^^^^ function or associated item not found in `Inner`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `from_message`, perhaps you need to implement it:
           candidate #1: `FromMessage`
   = note: this error originates in the derive macro `FromMessage` (in Nightly builds, run with -Z macro-backtrace for more info)
